--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.TableContainer-root {
+  max-height: 700px;
+  /* Establece una altura máxima para permitir el desplazamiento */
+}
